@@ -28,7 +28,6 @@ import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 import static org.mockito.Mockito.withSettings;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.faktorips.runtime.ClassloaderRuntimeRepository;
@@ -210,7 +209,7 @@ public class AbstractClassLoadingRuntimeRepositoryTest {
 
     public static class TestEnum {
 
-        public static final List<TestEnum> VALUES = Arrays.asList(new TestEnum(0, "A", "A", null),
+        public static final List<TestEnum> VALUES = List.of(new TestEnum(0, "A", "A", null),
                 new TestEnum(1, "B", "B", null));
 
         private final int index;
