@@ -1,9 +1,9 @@
 /*******************************************************************************
  * Copyright (c) Faktor Zehn GmbH - faktorzehn.org
- * 
+ *
  * This source code is available under the terms of the AGPL Affero General Public License version
  * 3.
- * 
+ *
  * Please see LICENSE.txt for full license terms, including the additional permissions and
  * restrictions as well as the possibility of alternative license terms.
  *******************************************************************************/
@@ -13,9 +13,7 @@ package org.faktorips.runtime.model.type;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
 import static org.hamcrest.core.IsNull.nullValue;
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -47,8 +45,8 @@ public class ModelObjectAttributesTest {
 
         assertAttributeIsReset(
                 ModelObjectAttributes.resetIrrelevantAttributes(modelObject),
-                Arrays.asList(modelObject),
-                Arrays.asList(TestPolicyWithVisitor.PROPERTY_INTEGER_ATTRIBUTE));
+                List.of(modelObject),
+                List.of(TestPolicyWithVisitor.PROPERTY_INTEGER_ATTRIBUTE));
         assertThat(modelObject.getIntegerAttribute(), is(nullValue()));
     }
 
@@ -104,8 +102,8 @@ public class ModelObjectAttributesTest {
 
         assertAttributeIsReset(
                 ModelObjectAttributes.resetIrrelevantAttributes(modelObject),
-                Arrays.asList(modelObject),
-                Arrays.asList(TestPolicyWithVisitor.PROPERTY_STRING_ATTRIBUTE));
+                List.of(modelObject),
+                List.of(TestPolicyWithVisitor.PROPERTY_STRING_ATTRIBUTE));
         assertThat(modelObject.getStringAttribute(), is(IpsStringUtils.EMPTY));
     }
 
@@ -150,8 +148,8 @@ public class ModelObjectAttributesTest {
 
         assertAttributeIsReset(
                 ModelObjectAttributes.resetIrrelevantAttributes(modelObject),
-                Arrays.asList(modelObject),
-                Arrays.asList(TestPolicyWithVisitor.PROPERTY_MONEY_ATTRIBUTE));
+                List.of(modelObject),
+                List.of(TestPolicyWithVisitor.PROPERTY_MONEY_ATTRIBUTE));
         assertThat(modelObject.getMoneyAttribute(), is(Money.NULL));
     }
 
@@ -196,8 +194,8 @@ public class ModelObjectAttributesTest {
 
         assertAttributeIsReset(
                 ModelObjectAttributes.resetIrrelevantAttributes(modelObject),
-                Arrays.asList(modelObject),
-                Arrays.asList(TestPolicyWithVisitor.PROPERTY_DECIMAL_ATTRIBUTE));
+                List.of(modelObject),
+                List.of(TestPolicyWithVisitor.PROPERTY_DECIMAL_ATTRIBUTE));
         assertThat(modelObject.getDecimalAttribute(), is(Decimal.NULL));
     }
 
@@ -232,8 +230,8 @@ public class ModelObjectAttributesTest {
 
         assertAttributeIsReset(ModelObjectAttributes.resetAttributes(modelObject,
                 ModelObjectAttribute::isValuePresent),
-                Arrays.asList(modelObject),
-                Arrays.asList(TestPolicyWithVisitor.PROPERTY_DECIMAL_ATTRIBUTE,
+                List.of(modelObject),
+                List.of(TestPolicyWithVisitor.PROPERTY_DECIMAL_ATTRIBUTE,
                         TestPolicyWithVisitor.PROPERTY_INTEGER_ATTRIBUTE,
                         TestPolicyWithVisitor.PROPERTY_STRING_ATTRIBUTE));
         assertThat(modelObject.getDecimalAttribute(), is(Decimal.NULL));
@@ -255,8 +253,8 @@ public class ModelObjectAttributesTest {
 
         assertAttributeIsReset(ModelObjectAttributes.resetAttributes(modelObject,
                 ModelObjectAttributes.IS_IRRELEVANT_BUT_NOT_EMPTY.or(ModelObjectAttribute::isMandatory)),
-                Arrays.asList(modelObject),
-                Arrays.asList(TestPolicyWithVisitor.PROPERTY_INTEGER_ATTRIBUTE,
+                List.of(modelObject),
+                List.of(TestPolicyWithVisitor.PROPERTY_INTEGER_ATTRIBUTE,
                         TestPolicyWithVisitor.PROPERTY_STRING_ATTRIBUTE,
                         TestPolicyWithVisitor.PROPERTY_MONEY_ATTRIBUTE));
     }
@@ -274,8 +272,8 @@ public class ModelObjectAttributesTest {
         List<ModelObjectAttribute> moas = ModelObjectAttributes.resetIrrelevantAttributes(policy);
 
         assertAttributeIsReset(moas,
-                Arrays.asList(policy, deckung),
-                Arrays.asList(TestPolicyWithVisitor.PROPERTY_DECIMAL_ATTRIBUTE,
+                List.of(policy, deckung),
+                List.of(TestPolicyWithVisitor.PROPERTY_DECIMAL_ATTRIBUTE,
                         TestDeckungWithVisitor.PROPERTY_MONEY_ATTRIBUTE));
     }
 
@@ -284,7 +282,8 @@ public class ModelObjectAttributesTest {
         TestPolicyWithVisitor modelObject = new TestPolicyWithVisitor();
         modelObject.setAllowedValuesForOnTheFly(new OrderedValueSet<>(false, null));
 
-        assertDoesNotThrow(() -> ModelObjectAttributes.resetIrrelevantAttributes(modelObject));
+        ModelObjectAttributes.resetIrrelevantAttributes(modelObject);
+        // did not throw an exception
     }
 
     private void assertAttributeIsReset(List<ModelObjectAttribute> moa,
